tests/cases/compiler-development/artifact/errors/diagnostic-macro-arity.ari
fn main() -> i64 {
  assert_eq!(1);
  return 0;
}
